# zksync-revm

./: Cargo.toml
src/: api.rs  evm.rs  handler.rs  l1block.rs  lib.rs  precompiles.rs  result.rs  spec.rs  transaction.rs
src/api/: builder.rs  default_ctx.rs  exec.rs
src/precompiles/: deployer.rs  l1_messenger.rs  l2_base_token.rs
src/transaction/: abstraction.rs  error.rs  priority_tx.rs  transaction.rs
