[package]
name = "zksync-revm"
version = "0.1.0"
edition = "2024"

[dependencies]
revm = { version = "^29.0.1", features = ["optional_balance_check"] }
auto_impl = "1.3.0"

[dev-dependencies]
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "rc",
] }
serde_derive = "1.0"

